<!--
  ~ /*
  ~  *
  ~  **    Copyright 2015, The LimeIME Open Source Project
  ~  **
  ~  **    Project Url: http://github.com/lime-ime/limeime/
  ~  **                 http://android.toload.net/
  ~  **
  ~  **    This program is free software: you can redistribute it and/or modify
  ~  **    it under the terms of the GNU General Public License as published by
  ~  **    the Free Software Foundation, either version 3 of the License, or
  ~  **    (at your option) any later version.
  ~  *
  ~  **    This program is distributed in the hope that it will be useful,
  ~  **    but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  **    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  **    GNU General Public License for more details.
  ~  *
  ~  **    You should have received a copy of the GNU General Public License
  ~  **    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~  *
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nan.toload.main.hd.ManageRelatedFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/SetupImFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/txtVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp"
                android:text="0.0"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/Setup_Wizard"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="top"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/setup_im_system_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_im_system_settings"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/setup_im_system_settings_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/setup_im_system_settings_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/setup_im_system_impicker_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/setup_im_system_impicker_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <Button
                            android:id="@+id/btnSetupImSystemSetting"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/setup_im_wizard_nextstep" />

                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <Button
                            android:id="@+id/btnSetupImSystemIMPicker"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/setup_im_system_selectLIME" />
                    </TableRow>
                </TableLayout>

                <TextView
                    android:id="@+id/setup_im_grant_permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/setup_im_grant_permission"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <Button
                            android:id="@+id/btnSetupImGrantPermission"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/setup_im_grant_permission_button" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/SetupImList"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="5dp">


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_im_database"
                    android:textAppearance="?android:attr/textAppearanceLarge" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/setup_im_database_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="5dp">

                        <Button
                            android:id="@+id/btnSetupImBackupLocal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/setup_im_backup_local" />

                        <Button
                            android:id="@+id/btnSetupImRestoreLocal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/setup_im_restore_local" />

                    </TableRow>

                </TableLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/setup_im_input_im"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_im_import"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/btnSetupIm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/setup_im_import_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <Button
                            android:id="@+id/btnSetupImImportStandard"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/setup_im_import_standard" />

                        <Button
                            android:id="@+id/btnSetupImImportRelated"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/setup_im_import_related" />
                    </TableRow>
                </TableLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_im_download"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/setup_im_download_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="5dp">

                        <Button
                            android:id="@+id/btnSetupImPhonetic"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/im_phonetic" />

                        <Button
                            android:id="@+id/btnSetupImDayi"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/im_dayi" />

                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="5dp"/>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="5dp">

                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical">

                    </TableRow>
                </TableLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>